# Rocket.rs---Vue.js--Tera-Boilerplate

./: Cargo.toml  README.md  package-lock.json
src/: main.rs
static/css/: style.css
static/js/: custom.js  routes.js  store.js
static/js/components/: count.js  hello-component.js
templates/: index.html  index.html.tera
